2007-10-21  Daniel Morales  <daniminas@gmail.com>

	* data/main.glade:
	* src/twitux-send-message-dialog.[ch]:
	* src/twitux-app.c:
	* src/twitux-network.c: Add initial code to send Direct Messages

2007-10-20  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in: 
	* libtwitux/Makefile.am:
	* libtwitux/twitux-keyring.[ch]:
	* src/twitux-account-dialog.c (account_response_cb)
	(twitux_account_dialog_show):
	* src/twitux-app.c (app_login):
	* src/twitux-network.c (network_cb_on_auth): Add support for gnome-keyring, and fix a leak
	in the network code.

2007-10-18  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux.h: 
	* data/twitux.schemas.in: remove gconf key for statusbar.

2007-20-18  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-add-dialog.[ch]:
	* src/twitux-app.[ch]:
	* src/twitux-network.c:
	* src/Makefile.am: Add friends functions.

	* data/main.glade: Add friend Dialog.

	* src/twitux-about.c: Updated my broken e-mail
	address.

2007-10-11  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-parser.c: Add convert time.

2007-10-05  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-tweet-list.c: Add initial code to handle window
	size and list view wrap.

2007-10-05  Daniel Morales  <daniminas@gmail.com>

	* data/main.glade:
	* src/twitux-app.[ch]:
	* src/twitux-network.[ch]:
	* src/twitux-parser.[ch]: Switch from TreeView to TwituxTweetList.

2007-09-16  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-tweet-list.[ch]: create separate listview object.

2007-09-14  Brian Pepple  <bpepple@fedoraproject.org>

	* data/main.glade:
	* data/twitux.schemas.in:
	* src/twitux-network.c (network_timeout_new): : 
	* src/twitux-preferences.c: Add ability for user to set interval
	between timeline retrievals.

2007-09-12  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-network.c: remove network_timeout_stop
	function.

2007-09-12  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-parser.[ch]: